syntax = "proto3";
package rune.api;
option go_package = "github.com/rzbill/rune/pkg/api/generated";

// HTTP annotations are optional; omit to avoid dependency for now

message WhoAmIRequest {}
message WhoAmIResponse {
  string subject_id = 1;
  repeated string roles = 2;
}

message CreateTokenRequest {
  string namespace = 1;
  string name = 2;
  string subject_id = 3;
  string subject_type = 4; // user|service
  repeated string roles = 5;
  int64 ttl_seconds = 6; // 0 for no expiry
  string description = 7;
}
message CreateTokenResponse {
  string id = 1;
  string name = 2;
  string namespace = 3;
  string secret = 4; // returned once
}

message RevokeTokenRequest {
  string namespace = 1;
  string name = 2;
}
message RevokeTokenResponse {
  bool revoked = 1;
}

service AuthService {
  rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
}


